<resources>
    <string name="app_name">EveryDayHabit</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5782047288878600/6628122771</string>
    <string name="native_ad_unit_id" translatable="false">ca-app-pub-5782047288878600/9611043170</string>
    <string name="rectangle_ad_unit_id" translatable="false">ca-app-pub-5782047288878600/9004546384</string>

    <string name="action_settings">Settings</string>
    <string name="action_new_habit">New habit</string>
    <string name="action_startup_info">Info</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_delete_habit">Delete habit</string>
    <string name="action_edit_habit">Edit habit</string>

    <string name="edit_day_activity_title">Daily progress</string>
    <string name="edit_day_default">Did you have a successful day?</string>
    <string name="edit_day_did_you">"Did you %s %s"</string>
    <string name="edit_day_today">"today?"</string>
    <string name="edit_day_yesterday">"yesterday?"</string>
    <string name="edit_day_on">"on "</string>
    <string name="edit_day_yes">Yes</string>
    <string name="edit_day_no">No</string>
    <string name="edit_day_why">Why were you unsuccessful?</string>
    <string name="edit_day_comments">Comments:</string>
    <string name="edit_day_reason">Log your reason</string>
    <string name="edit_day_log_comment">Log your comments</string>
    <string name="edit_day_legit">My reason is legitimate</string>
    <string name="edit_day_button">Done</string>

    <string name="new_habit_activity_title">New habit</string>
    <string name="new_habit_1">Let\'s start a new habit!\n
        \nMaking or breaking a habit takes conscious mental effort and perseverance, but the
        pay off can be massive.\n
        \nThink what it is that you want to achieve, reduce it to the
        simplest possible daily activity that would take very little time and physical effort to
        complete. Now complete the following sentence:\n
    </string>
    <string name="new_habit_2">Every day, I am going to…\n</string>
    <string name="new_habit_notify_title">Notification time</string>
    <string name="new_habit_notify">Set a daily reminder to log your progress.
        (Don\'t rely on this as a trigger to perform your habit)\n</string>
    <string name="new_habit_start_today">I\'m starting today</string>
    <string name="new_habit_start_tomorrow">I can only start tomorrow</string>
    <string name="new_habit_prompt">Enter simple daily action</string>
    <string name="new_habit_button">Add habit</string>

    <string name="preference_notifications">Notifications</string>
    <string name="preference_accept_excuses">Accept legitimate excuses</string>
    <string name="preference_excuses_summary_on">Legitimate excuses will not break streaks</string>
    <string name="preference_excuses_summary_off">Legitimate excuses are considered missed days
        and will break streaks</string>
    <string name="preference_about">"EveryDayHabit version"</string>
    <string name="preference_description">"Description"</string>
    <string name="preference_summary">"Tab text"</string>
    <string name="preference_notification_time">"Notification time"</string>
    <string name="preference_start_date">"Habit start date"</string>
    <string name="preference_notification_tone">Notification tone</string>

    <string name="default_habit_text">Default habit text</string>
    <string name="default_habit_word">Habit</string>

    <string name="motivation_default">The problems we face either break us, or make us.</string>
    <string name="motivation_next">Next motivation</string>
    <string name="motivation_share">Share motivation</string>
    <string name="motivation_copied">Motivation copied to clipboard</string>

    <string name="txt_habit">Habit</string>
    <string name="txt_new_habit">New habit</string>
    <string name="txt_add_new_habit">Add new habit</string>
    <string name="txt_no_reason">You didn\'t log a reason</string>
    <string name="txt_cannot_tomorrow">"Cannot edit tomorrow\'s entry"</string>
    <string name="txt_no_log">No progress logged</string>
    <string name="txt_no_comment">No comment</string>
    <string name="txt_success_rate">"Success rate: "</string>
    <string name="txt_current_streak">"Current streak: "</string>
    <string name="txt_longest_streak">"Longest streak: "</string>
    <string name="txt_progress_report">"%s progress report"</string>
    <string name="txt_0_percent" translatable="false">0%</string>
    <string name="txt_0" translatable="false">0</string>
    <string name="txt_delete">"Delete: "</string>
    <string name="txt_deleted">" has been deleted"</string>
    <string name="txt_no_email">No email application found</string>

    <string name="btn_delete">Delete</string>
    <string name="btn_rate_app">Rate app</string>
    <string name="btn_contact_us">Email us</string>

    <string name="feedback_title">Give feedback</string>
    <string name="feedback_msg">We would appreciate any feedback, feature requests or bug reports.\n
        \nPlease consider leaving a review on Google Play if you enjoy using EveryDayHabit.
    </string>

    <string name="first_use_activity_title" translatable="false">EveryDayHabit</string>
    <string name="first_use_button">Let\'s get started</string>
    <string name="first_use_text">Welcome to EveryDayHabit.\n

        \nHabits free up our mental capacity and energy by removing the need to make active
        decisions while performing habitual tasks. We can use the fact that our brains are
        constantly searching for behavioural patterns that can be automated to greatly improve
        our lives.\n

        \nTo achieve your life goals will require effort and perseverance, but to establish relevant
        micro habits to get you started does not. By breaking things down into the simplest possible
        daily activity that would take very little time and physical effort to complete, habit
        formation can be easy.\n

        \nFocus on the basics of habit creation: Make the activity simple, keep the trigger
        and reward consistent, and do it every day.\n

        \nHabits do not wait for Mondays or the first-of-the-months; all that matters is today.
        Your habit starts right now!
    </string>
    <string name="first_use_reminder">Start a micro-habit today!</string>

    <string name="congratulations_activity_title">Congratulations!</string>
    <string name="congratulations_text">
        Well done on completing seven weeks of your habit to %1$s every day!\n
        \nYou maintained a success rate of %2$s, and had a best running streak of %3$s.\n
        \nWhile 49 straight days should be sufficient to establish your habit, you\'re welcome to
        keep tracking your activity with EveryDayHabit. We\'ll shift your grid to display the most
        recent seven weeks only, but your stats will still be based on your progress since day one.
    </string>
    <string name="congratulations_button">Got it</string>

    <string name="day_tip_title">Tap here to log daily progress</string>
    <string name="day_tip_text">This grid will track your habit building over the next 49 days</string>
    <string name="settings_tip_title">Set custom app behaviour</string>
    <string name="settings_tip_text">Change notifications and other app settings</string>
    <string name="edit_tip_title">Tap here to edit habit</string>

    <string name="suggestions_button">Habit Suggestions</string>

    <string name="welcome_premium">Welcome to the premium experience</string>

    <string name="button_why_ads">Why ads?</string>
    <string name="ads_title">Why Ads?</string>
    <string name="ads_msg">We are working with Google to enable selling premium apps
        by South African devs. Until then, ads are the only way for us to support
        continuous development.\n
        \nIf you want to unlock the premium experience, we\'ll give it to you for free!
        Just send us an email. :)
    </string>
    <string name="preference_number">Number preference</string>
    <string name="privacy_policy">Privacy policy</string>

</resources>
