<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="za.co.twinc.everydayhabit.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_delete_habit"
        android:orderInCategory="102"
        android:title="@string/action_delete_habit"/>
    <item
        android:id="@+id/action_start"
        android:orderInCategory="101"
        android:title="@string/action_startup_info"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="103"
        android:title="@string/action_feedback" />
    <item
        android:id="@+id/menu_privacy_policy"
        android:orderInCategory="104"
        android:title="@string/privacy_policy"/>

</menu>
